# PIDSimulations

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-pid-sim-app.yml  release.yml  release_fixed.yml
docs/: GitHub_Actions_Release_Guide.md  oven_model.ipynb  release_docs.md
src/core/: logger_config.py  simulatons.py
src/gui/: main.py  main_fixed.py  plot_canvas.py  side_bar.py
