[tool.poetry]
name = "pidsimulations"
version = "0.1.0"
description = ""
authors = ["kdavjd <105581554+kdavjd@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
numpy = "^2.1.3"
plotly = "^5.24.1"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
