[tool.poetry]
name = "pidsimulations"
version = "0.1.0"
description = ""
authors = ["kdavjd <105581554+kdavjd@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
pid-sim = "gui.main:main"

[[tool.poetry.packages]]
include = "gui"
from = "src"

[tool.poetry.dependencies]
python = ">=3.12"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
numpy = "^2.1.3"
plotly = "^5.24.1"
nbformat = "^5.10.4"
pyqt6 = "^6.7.1"

[tool.poetry.dev-dependencies]
ruff = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
